# esy-rex-json

./: .gitignore  Readme.md  bsconfig.json  dune.bsb  esy.native.json  package-lock.json  package.json
esy.native.esy.lock/: index.json
examples/: Example.re  dune
src/: Json.bs.js  Json.re  dune
test/: BigList.bs.js  BigList.re  Demo.bs.js  Demo.re  DemoTest.bs.js  DemoTest.re  Example.bs.js  Test.bs.js  Test.re  TestLib.bs.js  TestLib.re  dune
