(env
 (dev
  (flags
   (:standard -warn-error -A -w -26))))

(executable
 (name Test)
 (modules Test TestLib DemoTest BigList Demo)
 (libraries Json))

(executable
 (name Example)
 (modules Example)
 (libraries Json))

(rule
 (alias runtest)
 (action
  (run %{exe:Test.exe})))

(rule
 (alias run_test_js)
 (deps Test.bs.js)
 (action
  (run node ./Test.bs.js)))
(rule
 (alias run_example_js)
 (deps Example.bs.js)
 (action
  (run node ./Example.bs.js)))
